--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -784,6 +784,10 @@ li > a:hover {
   width: 100%;
 }
 
+.min-w-full {
+  min-width: 100%;
+}
+
 .max-w-\[50\%\] {
   max-width: 50%;
 }
@@ -842,6 +846,10 @@ li > a:hover {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -966,10 +974,6 @@ li > a:hover {
 
 .pl-2 {
   padding-left: 0.5rem;
-}
-
-.font-mono {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .font-heebo {
@@ -1099,6 +1103,14 @@ html {
     margin-top: 0.125rem;
   }
 
+  .md\:block {
+    display: block;
+  }
+
+  .md\:list-item {
+    display: list-item;
+  }
+
   .md\:hidden {
     display: none;
   }
@@ -1106,6 +1118,18 @@ html {
   .md\:h-fit {
     height: -moz-fit-content;
     height: fit-content;
+  }
+
+  .md\:h-14 {
+    height: 3.5rem;
+  }
+
+  .md\:h-16 {
+    height: 4rem;
+  }
+
+  .md\:h-12 {
+    height: 3rem;
   }
 
   .md\:min-h-0 {
@@ -1122,6 +1146,26 @@ html {
 
   .md\:w-auto {
     width: auto;
+  }
+
+  .md\:w-14 {
+    width: 3.5rem;
+  }
+
+  .md\:w-16 {
+    width: 4rem;
+  }
+
+  .md\:w-12 {
+    width: 3rem;
+  }
+
+  .md\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .md\:min-w-0 {
+    min-width: 0px;
   }
 
   .md\:flex-row {
@@ -1144,6 +1188,10 @@ html {
     gap: 1rem;
   }
 
+  .md\:bg-transparent {
+    background-color: transparent;
+  }
+
   .md\:p-2 {
     padding: 0.5rem;
   }
@@ -1155,6 +1203,10 @@ html {
 
   .md\:pt-6 {
     padding-top: 1.5rem;
+  }
+
+  .md\:transition-none {
+    transition-property: none;
   }
 }
 
