fixed choosing car

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -664,10 +664,6 @@ li > a:hover {
   margin-top: 1rem;
 }
 
-.block {
-  display: block;
-}
-
 .inline-block {
   display: inline-block;
 }
@@ -690,10 +686,6 @@ li > a:hover {
 
 .h-12 {
   height: 3rem;
-}
-
-.h-14 {
-  height: 3.5rem;
 }
 
 .h-16 {
@@ -752,14 +744,6 @@ li > a:hover {
   width: 3rem;
 }
 
-.w-14 {
-  width: 3.5rem;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
 .w-2\/3 {
   width: 66.666667%;
 }
@@ -794,6 +778,14 @@ li > a:hover {
 
 .max-w-md {
   max-width: 28rem;
+}
+
+.max-w-lg {
+  max-width: 32rem;
+}
+
+.max-w-xs {
+  max-width: 20rem;
 }
 
 .flex-shrink-0 {
@@ -846,10 +838,6 @@ li > a:hover {
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-center {
@@ -1103,10 +1091,6 @@ html {
     margin-top: 0.125rem;
   }
 
-  .md\:block {
-    display: block;
-  }
-
   .md\:list-item {
     display: list-item;
   }
@@ -1115,9 +1099,8 @@ html {
     display: none;
   }
 
-  .md\:h-fit {
-    height: -moz-fit-content;
-    height: fit-content;
+  .md\:h-12 {
+    height: 3rem;
   }
 
   .md\:h-14 {
@@ -1128,8 +1111,9 @@ html {
     height: 4rem;
   }
 
-  .md\:h-12 {
-    height: 3rem;
+  .md\:h-fit {
+    height: -moz-fit-content;
+    height: fit-content;
   }
 
   .md\:min-h-0 {
@@ -1140,12 +1124,8 @@ html {
     width: 50%;
   }
 
-  .md\:w-24 {
-    width: 6rem;
-  }
-
-  .md\:w-auto {
-    width: auto;
+  .md\:w-12 {
+    width: 3rem;
   }
 
   .md\:w-14 {
@@ -1156,12 +1136,12 @@ html {
     width: 4rem;
   }
 
-  .md\:w-12 {
-    width: 3rem;
+  .md\:w-24 {
+    width: 6rem;
   }
 
-  .md\:w-2\/3 {
-    width: 66.666667%;
+  .md\:w-auto {
+    width: auto;
   }
 
   .md\:min-w-0 {
@@ -1225,6 +1205,10 @@ html {
 
   .lg\:w-full {
     width: 100%;
+  }
+
+  .lg\:max-w-lg {
+    max-width: 32rem;
   }
 
   .lg\:flex-row {
